--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,7 +78,7 @@ build_to_docker_hub:
     - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
   script:
     - docker build -t $DOCKER_HUB_USER/demo-gads-app:latest .
-    - docker push DOCKER_HUB_USER/demo-gads-app:latest
+    - docker push $DOCKER_HUB_USER/demo-gads-app:latest
 
 # deploy:
 #   stage: deploy
