--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,8 @@ workflow:
 
 variables:
   DOCKER_HUB_USER: wzije
+  SERVER_IP: 139.162.44.66
+  SERVER_USER: root
 
 stages:
   - lint
@@ -68,7 +70,7 @@ build_image:
     - docker push $CI_REGISTRY_IMAGE:latest
 
 build_to_docker_hub:
-  only:
+  except:
     - main
   stage: build
   image: docker:20.10.16
@@ -80,7 +82,6 @@ build_to_docker_hub:
     - docker build -t $DOCKER_HUB_USER/demo-gads-app:latest .
     - docker push $DOCKER_HUB_USER/demo-gads-app:latest
 
-# deploy:
-#   stage: deploy
-#   script: echo "Define your deployment script!"
-#   environment: production
+deploy:
+  stage: deploy
+  script: ssh -i $SSH_PRIVATE_KEY $SERVER_USER@SERVER_IP "ls -al"
