--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,4 +87,4 @@ deploy:
   before_script:
     - chmod 400 $SSH_PRIVATE_KEY
   script:
-    - ssh -i $SSH_PRIVATE_KEY $SERVER_USER@$SERVER_IP "ls -al"
+    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY $SERVER_USER@$SERVER_IP "ls -al"
