--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,5 +88,5 @@ deploy:
     - chmod 400 $SSH_PRIVATE_KEY
   script:
     - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY $SERVER_USER@$SERVER_IP "
-        docker run --name=demo-gads-app -p 8080:8080 $DOCKER_HUB_USER/demo-gads-app:latest
+        docker run -d --name=demo-gads-app -p 8080:8080 $DOCKER_HUB_USER/demo-gads-app:latest
       "
