--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,8 +86,7 @@ deploy:
   stage: deploy
   before_script:
     - chmod 400 $SSH_PRIVATE_KEY
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
   script:
     - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY $SERVER_USER@$SERVER_IP "
-        docker ps -aq | xargs docker stop | xargs docker rm &&
-        docker run -d --name=demo-gads-app -p 8080:8080 $DOCKER_HUB_USER/demo-gads-app:latest
-      "
+        docker run -d --name=demo-gads-app -p 8080:8080 $CI_REGISTRY_IMAGE:latest"
